--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,11 @@ flutter:
     - assets/icons/3d.png
     - assets/icons/calendar.png
     - assets/icons/notes.png
+    - assets/icons/header.png
+    - assets/icons/result.png
+    - assets/icons/about.png
+    - assets/icons/appHeader.jpg
+
 
   #   - images/a_dot_ham.jpeg
 
