--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   table_calendar: ^3.1.3
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  fl_chart: ^0.69.2
 
 dev_dependencies:
   flutter_test:
