--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/icons/result.png
     - assets/icons/about.png
     - assets/icons/appHeader.jpg
+    - assets/icons/dev.jpg
 
 
   #   - images/a_dot_ham.jpeg
